general software refresh